# avrp-handler

./: .gitignore  .gitmodules  README.md  index.js  package.json
cpp/: CMakeLists.txt  config.example.json  config.json
cpp/src/: data_server_helper.hxx  gateway_helper.hxx  handler_engine.hxx  handler_parameters.hxx  handler_task.hxx  main.cxx  models.hxx  study_config.hxx  task_processor.hxx
cpp/src/modules/: abstract_module.hxx  module_config.hxx  module_studygen.hxx
cpp/src/testing/: test_studygen.sh
handler-js/: ds_helpers.js  gateway_helpers.js  handler.js  modles.js  object_factory.js  task_worker.js
scripts/: cpp_configure_example.sh
